--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -6,19 +6,29 @@ on:
       - 'develop'
 
 jobs:
-  lint-scan-build:
-    if: startsWith(github.head_ref, 'feature/')
-    name: Linting, Vulnerability Scanning and Building
+  lint-scan-unit:
+    if: |
+      startsWith(github.head_ref, 'feature/') || 
+      startsWith(github.head_ref, 'bugfix/')
+    name: Lint, Scan and Unit Test
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Secret Scanning
+      uses: secret-scanner/action@0.0.2
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: 20
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        languages: 'javascript'
 
     - name: Install dependencies
       run: npm ci
@@ -31,3 +41,7 @@ jobs:
 
     - name: Build React app
       run: npm run build
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3
+    
