--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -6,6 +6,19 @@ on:
       - 'develop'
 
 jobs:
+  secret-scanning:
+    if: |
+      startsWith(github.head_ref, 'feature/') || 
+      startsWith(github.head_ref, 'bugfix/')
+    name: Secret Scanning
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Secret Scanning
+        uses: secret-scanner/action@0.0.2
+
   lint-scan-unit:
     if: |
       startsWith(github.head_ref, 'feature/') || 
@@ -17,19 +30,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Secret Scanning
-      uses: secret-scanner/action@0.0.2
-
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: 20
-
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
+    
+    - name: Cache Node.js modules
+      id: cache-npm
+      uses: actions/cache@v4
       with:
-        languages: 'javascript'
-
+        path: ~/.npm 
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+        
     - name: Install dependencies
       run: npm ci
 
@@ -41,7 +55,4 @@ jobs:
 
     - name: Build React app
       run: npm run build
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
     
