--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,4 +1,4 @@
-name: Integration Tests, Make Docker Image and E2E Tests
+name: Make Docker Image
 
 on:
   push:
@@ -46,6 +46,18 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
           output: 'trivy-results.sarif'
+
+      - name: Modify Helm image tag
+        run: |
+          sed -i "s/tag:.*/tag: ${{ env.VERSION }}/" helm/values.yaml
+
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "github-actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add helm/values.yaml          
+          git commit -m "[skip ci] Update imageTag to ${{ env.VERSION }}"
+          git push origin ${{ github.ref }}
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
