--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -56,7 +56,7 @@ jobs:
           git config --local user.email "github-actions@github.com"
           git config --local user.name "GitHub Actions"
           git add helm/values.yaml          
-          git commit -m "[skip ci] Update imageTag to ${{ env.VERSION }}"
+          git commit -m "Update imageTag to ${{ env.VERSION }}"
           git push origin ${{ github.ref }}
 
       - name: Upload Trivy scan results to GitHub Security tab
