--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -5,7 +5,5 @@ paths:
   - "**/*.ts"
   - "**/*.tsx"
 
-exclude-paths:
-  - 'node_modules/**'
-  - '**/node_modules/**'
-  - '*/node_modules/**'
+paths-ignore:
+  - 'node_modules'
