--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -47,15 +47,15 @@ jobs:
           severity: 'CRITICAL,HIGH'
           output: 'trivy-results.sarif'
 
-      - name: Modify Helm image tag
+      - name: Modify Kustomize image tag
         run: |
-          sed -i "s/tag:.*/tag: ${{ env.VERSION }}/" helm/values.yaml
+          sed -i "s/newTag:.*/newTag: ${{ env.VERSION }}/" kustomize/overlays/dev/kustomization.yaml
 
       - name: Commit and push changes
         run: |
           git config --local user.email "github-actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add helm/values.yaml          
+          git add kustomize/overlays/dev/kustomization.yaml          
           git commit -m "Update imageTag to ${{ env.VERSION }}"
           git push origin ${{ github.ref }}
 
