--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -31,7 +31,7 @@ jobs:
           
       - name: Build Docker image
         run: |
-          docker buildx build --platform linux/amd64 --tag  \
+          docker buildx build --platform linux/amd64,linux/arm64 --tag  \
             ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}  \
             --cache-to type=gha,mode=max,compression=zstd \
             --cache-from type=gha,mode=max,compression=zstd --push .
